Fixed V-Spacing of rows.

--- a/arc_search/static/spec_search/table_styles.css
+++ b/arc_search/static/spec_search/table_styles.css
@@ -13,3 +13,11 @@ th, td {
     width: 1200px;
     height: 250px;
 } */
+
+td {
+    padding-bottom: 40px;
+}
+
+th {
+    padding-bottom: 20px;
+}
